--- a/shop_toy/catalog/catalog.html
+++ b/shop_toy/catalog/catalog.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
     <title>Каталог</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../style.css">
+    <script src="../script/product.js" defer></script>
+    <script src="../script/script.js" defer></script>
 </head>
 
 <body>
@@ -24,19 +25,29 @@
         </ul>
     </header>
     <div class="content">
+        <div class="basket">
+            <h1>Корзина</h1>
+            <h1 id="summ">Пусто</h1>
+        </div>
         <h1>Каталог</h1>
-        <a class="catalog" href="poodle_puppy.html">
-            <img src="../img/poodle_puppy.jpg" alt="Щенок пуделя">
-            <h1>Щенок пуделя</h1>
-        </a>
-        <a class="catalog" href="white_llama.html">
-            <img src="../img/white_llama.jpg" alt="Лама Белая">
-            <h1>Лама Белая</h1>
-        </a>
-        <a class="catalog" href="duck_with_duckling.html">
-            <img src="../img/duck_with_duckling.jpg" alt="Утка с утенком">
-            <h1>Утка с&nbsp;утенком</h1>
-        </a>
+        <div class="catalog">
+            <a href="poodle_puppy.html"> <img src="../img/poodle_puppy.jpg" alt="Щенок пуделя">
+                <h3>Щенок пуделя</h3>
+            </a>
+            <button id="0"></button>
+        </div>
+        <div class="catalog">
+            <a href="white_llama.html"> <img src="../img/white_llama.jpg" alt="Лама Белая">
+                <h3>Лама Белая</h3>
+            </a>
+            <button id="1"></button>
+        </div>
+        <div class="catalog">
+            <a href="duck_with_duckling.html"> <img src="../img/duck_with_duckling.jpg" alt="Утка с утенком">
+                <h3>Утка с&nbsp;утенком</h3>
+            </a>
+            <button id="2"></button>
+        </div>
     </div>
     <footer>
         <p>Все права защищены &copy;&nbsp; 2019</p>
