--- a/shop_toy/catalog/catalog.html
+++ b/shop_toy/catalog/catalog.html
@@ -27,6 +27,7 @@
     <div class="content">
         <div class="basket">
             <h1>Корзина</h1>
+            <div id="basket"></div>
             <h1 id="summ">Пусто</h1>
         </div>
         <h1>Каталог</h1>
@@ -34,19 +35,19 @@
             <a href="poodle_puppy.html"> <img src="../img/poodle_puppy.jpg" alt="Щенок пуделя">
                 <h3>Щенок пуделя</h3>
             </a>
-            <button id="0"></button>
+            <button id="button_0" class="addBasket" value="0"></button>
         </div>
         <div class="catalog">
             <a href="white_llama.html"> <img src="../img/white_llama.jpg" alt="Лама Белая">
                 <h3>Лама Белая</h3>
             </a>
-            <button id="1"></button>
+            <button id="button_1" class="addBasket" value="1"></button>
         </div>
         <div class="catalog">
             <a href="duck_with_duckling.html"> <img src="../img/duck_with_duckling.jpg" alt="Утка с утенком">
                 <h3>Утка с&nbsp;утенком</h3>
             </a>
-            <button id="2"></button>
+            <button id="button_2" class="addBasket" value="2"></button>
         </div>
     </div>
     <footer>
